--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,12 +32,12 @@ $neutral300: #b8aeba;
   --neutral-white: #ffffff;
 }
 
-$spacing-xxs: "4px";
-$spacing-xs: "8px";
-$spacing-s: "16px";
-$spacing-m: "32px";
-$spacing-l: "48px";
-$spacing-xl: "96px";
+$spacing-xxs: 4px;
+$spacing-xs: 8px;
+$spacing-s: 16px;
+$spacing-m: 32px;
+$spacing-l: 48px;
+$spacing-xl: 96px;
 
 // Fonts
 $termina: "Helvetica", sans-serif;
